# HeapAnalysis

./: .clang-format  .gitignore  CMakeLists.txt  graphviz_make_png.sh
include/: analysis.h  analysis2.h  constraint.h  constraint2.h  controlflow.h  execution.h  execution2.h  fmt-utils.h  fmt-utils2.h  iter-util.h  iter-utils.h  llvm-utils.h  location.h  location2.h  store.h  summary.h  summary2.h  utils.h
include/utils/: fmt-utils.h  hashing-utils.h  llvm-utils.h
src/: analysis.cpp  analysis2.cpp  constraint.cpp  constraint2.cpp  controlflow.cpp  execution.cpp  execution2.cpp  module.cpp  module2.cpp  store.cpp  summary.cpp  summary2.cpp
test/: update.sh
test/app/coreutils/: cat.bc  cat.ll  cp.bc  cp.ll  kill.bc  kill.ll  ls.bc  ls.ll  touch.bc
test/app/gzip/: gzip.bc  gzip.ll
test/app/nginx/: nginx.bc
test/app/spec/: bzip2.bc  bzip2.ll  h264ref.bc  mcf.bc  mcf.ll
test/bc/: call.bc  cfg.bc  hello.bc  loop.bc  math.bc
test/ll/: call.ll  cfg.ll  hello.ll  loop.ll  math.ll  pdg.ll
test/src/: calc.c  call.c  cfg.c  hello.c  loop.c  math.c  pdg.c  recursive.c  summary.c  zero.c
